test/e2e/fail/006-immutable-assign/expected.stderr
error[E0006]: cannot assign to immutable variable
 --> $FILE:2:1
  |
2 | x = 2;
  | ^^^^^ cannot assign to `x`
  |
  = help: consider making `x` mutable: `let mut x = ...`
